fixed free shipping align for mobile

--- a/web/assets/css/custom.css
+++ b/web/assets/css/custom.css
@@ -549,3 +549,8 @@ h2.indexslogan
 {
     font-weight: normal;
 }
+
+.freeshippingmobile
+{
+    display:block;
+}
